<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <com.xll.mvplib.view.NoSwipeViewPager
        android:id="@+id/view_pager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/ll_star"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <View
        style="@style/viewLine"
        app:layout_constraintBottom_toTopOf="@+id/ll_star"/>

    <LinearLayout
        android:id="@+id/ll_star"
        style="@style/main_tab"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ll_square"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/iv_star"
            style="@style/main_tab_image"
            />

        <TextView
            android:id="@+id/tv_star"
            style="@style/main_tab_text"
            android:text="@string/star"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_square"
        style="@style/main_tab"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ll_plus"
        app:layout_constraintStart_toEndOf="@+id/ll_star">

        <ImageView
            android:id="@+id/iv_square"
            style="@style/main_tab_image"
            />

        <TextView
            android:id="@+id/tv_square"
            style="@style/main_tab_text"
            android:text="@string/square"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_plus"
        style="@style/main_tab"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ll_information"
        app:layout_constraintStart_toEndOf="@+id/ll_square">

        <ImageView
            style="@style/main_tab_image"
            android:src="@drawable/plus"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_information"
        style="@style/main_tab"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ll_oneself"
        app:layout_constraintStart_toEndOf="@+id/ll_plus">

        <ImageView
            android:id="@+id/iv_information"
            style="@style/main_tab_image"
            />

        <TextView
            android:id="@+id/tv_information"
            style="@style/main_tab_text"
            android:text="@string/information"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_oneself"
        style="@style/main_tab"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ll_information">

        <ImageView
            android:id="@+id/iv_oneself"
            style="@style/main_tab_image"
            />

        <TextView
            android:id="@+id/tv_oneself"
            style="@style/main_tab_text"
            android:text="@string/oneself"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>