<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             android:focusable="true"
                                             android:focusableInTouchMode="true">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/y100"
        android:text="@string/login_title"
        android:textColor="@color/black"
        android:textSize="@dimen/x50"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/til_verification_code"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/x50"
        android:text="@string/login_content"
        android:textColor="@color/black_3"
        android:textSize="@dimen/text_size_32"
        app:layout_constraintBottom_toTopOf="@+id/til_verification_code"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_verification_code"
        style="@style/base_style"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:passwordToggleEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_verification_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/padding_horizontal"
            android:drawableStart="@drawable/verification_code"
            android:hint="手机验证码"
            android:inputType="number"
            android:maxLength="6"
            android:textSize="@dimen/text_size_28"/>

    </android.support.design.widget.TextInputLayout>
    <TextView
        android:id="@+id/tv_password_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_vertical"
        android:text="密码登录"
        android:textColor="@color/material_blue"
        android:textSize="@dimen/text_size_24"
        app:layout_constraintStart_toStartOf="@+id/til_verification_code"
        app:layout_constraintTop_toBottomOf="@+id/til_verification_code"/>
    <TextView
        android:id="@+id/tv_send_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_vertical"
        android:text="获取验证码"
        android:textColor="@color/material_blue"
        android:textSize="@dimen/text_size_24"
        app:layout_constraintEnd_toEndOf="@+id/til_verification_code"
        app:layout_constraintTop_toBottomOf="@+id/til_verification_code"/>

    <Button
        android:id="@+id/btn_login"
        style="@style/button"
        android:text="登录"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_verification_code"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/padding_vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/icon_selected"
            android:text="我已阅读并同意"
            android:textColor="@color/black_9"
            android:textSize="@dimen/text_size_24"/>

        <TextView
            android:id="@+id/tv_agreement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding_horizontal"
            android:text="@string/agreement"
            android:textColor="@color/material_blue"
            android:textSize="@dimen/text_size_24"/>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>